--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-+This is the second branch and to be honest i dont know what i am doing 
-but nevertheless i am not planning to stop anytime soon
-see you on the next one
-and this is an edit of my repository from sublimne text
-i just figured out i could do this and commit it to the page from here
-cool right?
+<doctype html>
+	<html>
+	<charset="uts-18">
+		<title>Monthly Article</title>
+		<body><h1>Who is Yusufu</h1>
+		</body>
+</head>
+	</html>
