--- a/index.html
+++ b/index.html
@@ -1,8 +1,43 @@
-<doctype html>
-	<html>
-	<charset="uts-18">
-		<title>Monthly Article</title>
-		<body><h1>Who is Yusufu</h1>
-		</body>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Shopping List on Wednesday!</title>
 </head>
-	</html>
+<body>
+<h1>List of Jollof rice ingredients to get from the store!</h1>
+ Below are the necessary Ingredients to get from the store should you want to prepare a very good Nigerian&nbsp;Jollof&nbsp;rice!
+<ul>
+  <li>Local Rice</li>
+  <li>Tomatoes(Fresh not can preferably)</li>
+  <li>Green Vegetables</li>
+  <li>Pepper, Onion, Vegetable oil&amp;Meat(or chicken)</li>
+  <li>Spices
+    <ul>
+      <li>Maggi</li>
+      <li>Salt</li>
+      <li>Curry and Thyme</li>
+      <li>Grinded Creyfish</li>
+      <li>Carrot and Green Bean</li>
+      <li>Jollof rice spice</li>
+    </ul>
+  </li>
+</ul>
+<h1>Step by Step procedure on your cooking Journey!</h1>
+<ol>
+  <li>Place the pot on fire with a measured amount of water in it all ready to boil</li>
+  <li>Perboil the rice by putting the already measured rice into the pot and letting it boil with the water a bit</li>
+  <li>Remove the rice into a separate bowl to wash gently and empty the perboiled water from the pot and add Vegetable oil</li>
+  <li>Wash the rice and shifter again to properly remove the starch element from the body</li>
+  <li>Add your grinded/blended tomatoes,pepper&amp;onion, measured salt and maggi, already cutted vegetable, grinded creyfish, curry and thyme to the already frying oil and wait to properly fry</li>
+  <li>Add a measured water into the pot and wait for it to boil a bit</li>
+  <li>Add your rice and let it cook</li>
+  <li>Whilest it's almost done, add your already fried meat or chicken and you already neatly cutted carrot and green bean into the food and let it cook a bit more</li>
+  <li>Remove the pot from fire and dish out your Meal!</li>
+</ol>
+<ul>
+<li>Lo and behold you are now officially a chef, Congratulations!</li>
+</ul>
+<footer>This list does not guarantee you a perfect run at the end of your cooking but just like they say, practice makes perfect! with time you should be a professional.</footer>
+</body>
+</html>
